--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <body>
     <section class="card">
       <article class="card2">
-        <img src="images/image-equilibrium.jpg" class="image" alt="image equilibrium" />
-        <div class="container-icon-view">
-            <img src="images/icon-view.svg" alt="image view" class="icon-view">
+        <div class="image-container">
+          <img src="images/image-equilibrium.jpg" class="image" alt="image equilibrium" />
         </div>
         <h1 class="title">Equilibrium #3429</h1>
         <p class="text"> Our Equilibrium collection promotes balance and calm </p>
